--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build": "yarn build-storybook && shx mv storybook-static out",
     "prepublishOnly": "node ./node_modules/sm-commons/scripts/bundle",
     "prismic": "prismic",
-    "slicemachine": "start-slicemachine --port 9999"
+    "slicemachine": "start-slicemachine --port 9999",
+    "storybook": "start-storybook -p 8888",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "next": "^10.0.0",
@@ -22,12 +24,19 @@
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.3",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@storybook/addon-controls": "^6.1.3",
+    "@storybook/addon-essentials": "^6.1.2",
+    "@storybook/addon-knobs": "^6.1.2",
+    "@storybook/react": "6.1.2",
+    "babel-loader": "^8.2.1",
+    "babel-plugin-react-require": "^3.1.3",
     "prismic-cli": "3.8.3-beta.0",
     "shx": "^0.3.3",
-    "slice-machine-ui": "^0.0.38",
+    "slice-machine-ui": "^0.0.39",
     "sm-commons": "^0.0.23"
   }
 }
